# Simons-Column

./: README.md
.config/: mise.toml
.config/ssh/: .gitignore  README.md
docs/: README.md
docs/benchmarks/: README.md
docs/benchmarks/gpio/: README.md  config.toml
docs/benchmarks/gpio/python/lights/: shift_bit.py  shift_chain.py  shift_register.py
docs/benchmarks/gpio/python/rpi_gpio/: shift_bit.py  shift_chain.py  shift_register.py  single_pin.py
docs/benchmarks/gpio/rust/rppal/: Cargo.toml
docs/benchmarks/gpio/rust/rppal/.cargo/: config.toml
docs/benchmarks/gpio/rust/rppal/src/benchmark/: shared.rs  shift_bit.rs  shift_chain.rs  shift_register.rs  single_pin.rs
docs/benchmarks/gpio/rust/tpic6c596/: Cargo.toml
docs/benchmarks/gpio/rust/tpic6c596/src/benchmark/: shared.rs  shift_bit.rs  shift_chain.rs  shift_register.rs
node/: README.md
node/ui/: package.json  pnpm-lock.yaml  svelte.config.js
node/ui/src/lib/: Editor.svelte  Monaco.svelte  monaco.ts
node/ui/src/routes/: +page.svelte
python/: README.md
python/examples/: bounce.py  fill.py
python/lights/: __init__.py
python/simons_column/: .gitignore  MANIFEST.in  setup.py
python/simons_column/simons_column/: bindings.py  controller.py
rpi/: README.md  setup.sh
rust/: Cargo.toml  README.md
rust/crates/tpic6c596/: Cargo.toml
rust/crates/tpic6c596/src/: emulator.rs  lib.rs
rust/crates/tpic6c596/src/connectors/: emulator.rs  mod.rs  rpi.rs
rust/libs/lights/: Cargo.toml
rust/libs/lights/src/: controller.rs  lib.rs
