[package]
  description = "Control TPIC6C596 power logic 8-bit shift register."
  name = "tpic6c596"
  version = "0.0.1"

  authors.workspace = true
  documentation.workspace = true
  edition.workspace = true
  homepage.workspace = true
  license.workspace = true
  readme.workspace = true
  repository.workspace = true

[lints]
  workspace = true

[features]
  default = ["emulator"]

  delay = []
  emulator = []

[dependencies]
