[package]
  name = "lights"
  version = "0.1.0"

  authors.workspace = true
  documentation.workspace = true
  edition.workspace = true
  homepage.workspace = true
  license.workspace = true
  readme.workspace = true
  repository.workspace = true

[lib]
  crate-type = ["cdylib"]

[lints]
  workspace = true

[features]
  default = ["rpi"]

  emulator = ["tpic6c596/connector-emulator"]
  rpi = ["tpic6c596/connector-rpi", "tpic6c596/delay"]

[dependencies]
  tpic6c596 = { workspace = true }
